# call-me-maybe

./: .gitignore  LICENSE  Makefile  README.md  ascii_title.txt  pyproject.toml  requirements.txt
src/: BASE_PROMPT.txt  __init__.py  __main__.py  __main__new.py  error_handling.json  main.py  utils.py
